--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~2.1.0",
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
+    "angular2-cookie": "1.2.5",
     "core-js": "^2.4.1",
     "ng2-toastr": "1.3.0",
     "rxjs": "5.0.0-beta.12",
